<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/new_expense" 
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/expenseSpinner"
        android:layout_marginTop="19dp"
        android:layout_toStartOf="@+id/textView1"
        android:text="@string/expense_type"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/expenseValue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/expenseSpinner"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/expenseDescription"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/accountSpinner"
        android:ems="10"
        android:inputType="text" >

    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:onClick="createExpense"
        android:text="@string/accept_button" />

    <RadioGroup
        android:id="@+id/incomeExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_alignTop="@+id/textView1" >

        <RadioButton
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:checked="true"
            android:text="@string/expense" />

        <RadioButton
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />
    </RadioGroup>

    <Spinner
        android:id="@+id/expenseSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/incomeExpense"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="16dp"
        android:entries="@array/expense_types"
        android:prompt="@string/expense_type" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/accountSpinner"
        android:layout_marginBottom="23dp"
        android:layout_toStartOf="@+id/textView1"
        android:text="@string/account_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="18dp"
        android:text="@string/expense_description"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/accountSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/expenseSpinner"
        android:layout_below="@+id/expenseValue"
        android:layout_marginTop="14dp"
        android:prompt="@string/account_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/TextView01"
        android:layout_alignRight="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/textView1"
        android:text="@string/value"
        android:textStyle="bold" />
    
</RelativeLayout>