<?xml version="1.0" encoding="utf-8"?> 

	<LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
		android:layout_height="match_parent" 
		android:gravity="center_vertical"
		android:orientation="vertical" >
		
		<ImageView 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_gravity="center" 
		    android:layout_marginBottom="50dp" 
		    android:src="@drawable/logo" />
	
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/user"
		    android:layout_marginBottom="20dp" 
		    android:textSize="16sp" />
		
		<EditText 
	    	android:id="@+id/user"
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content"
	    	android:layout_marginBottom="20dp" 
	    	android:inputType="text" >
	    	
			<requestFocus /> 
		</EditText> 
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dp"
		    android:text="@string/pass"
		    android:textSize="16sp" />
 
		<EditText 
		    android:id="@+id/password" 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:layout_marginBottom="20dp"
		    android:inputType="textPassword" />

		<GridLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:columnCount="1" >

		    <Button
		        android:id="@+id/button1"
		        android:layout_width="130dp"
		        android:layout_height="wrap_content"
		        android:layout_column="0"
		        android:layout_gravity="left|top"
		        android:layout_row="0"
		        android:onClick="registerOnClick"
		        android:text="@string/register" />

		    <Button
		        android:layout_width="174dp"
		        android:layout_height="wrap_content"
		        android:layout_column="0"
		        android:layout_gravity="right|top"
		        android:layout_row="0"
		        android:onClick="loginOnClick"
		        android:text="@string/login" />

		</GridLayout>
		
	</LinearLayout>