<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" 
	    android:layout_height="match_parent"
	    android:orientation="vertical">

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" >

		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/new_expense"
		        android:layout_below="@+id/textView2"
		        android:layout_marginTop="58dp"
		        android:text="@string/money_total" />

		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/textView1"
		        android:layout_alignBottom="@+id/textView1"
		        android:layout_toRightOf="@+id/new_expense"
		        android:text="TextView" />

		    <TextView
		        android:id="@+id/new_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@+id/new_expense"
		        android:layout_alignBottom="@+id/new_expense"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="58dp"
		        android:clickable="true"
		        android:drawableTop="@drawable/new_account"
		        android:onClick="selectOption"
		        android:text="@string/new_account"
		        android:textStyle="bold" />

		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:text="@string/app_name"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		    <TextView
		        android:id="@+id/config"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignRight="@+id/new_account"
		        android:layout_alignTop="@+id/my_accounts"
		        android:clickable="true"
		        android:drawableTop="@drawable/config"
		        android:onClick="selectOption"
		        android:text="@string/config"
		        android:textStyle="bold" />

		    <TextView
		        android:id="@+id/my_accounts"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/new_expense"
		        android:layout_alignParentBottom="true"
		        android:layout_marginBottom="80dp"
		        android:clickable="true"
		        android:drawableTop="@drawable/my_accounts"
		        android:onClick="selectOption"
		        android:text="@string/my_accounts"
		        android:textStyle="bold" />

		    <TextView
		        android:id="@+id/new_expense"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_above="@+id/my_accounts"
		        android:layout_marginBottom="67dp"
		        android:layout_toLeftOf="@+id/textView2"
		        android:clickable="true"
		        android:drawableTop="@drawable/new_expense"
		        android:onClick="selectOption"
		        android:text="@string/new_expense"
		        android:textStyle="bold" />

		</RelativeLayout>

	</LinearLayout>
