<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="34dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="34dp" >
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="34dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="26dp"
                    android:text="@string/account_name"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/accountName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/textView2"
                    android:ems="10"
                    android:singleLine="true"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>

            </RelativeLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="34dp" >
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="34dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="29dp"
                    android:text="@string/account_value"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/accountValue"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="18dp"
                    android:layout_toRightOf="@+id/textView3"
                    android:ems="10"
                    android:inputType="numberDecimal|numberSigned"
                    android:singleLine="true" />

            </RelativeLayout>
            
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="212dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_gravity="left|top"
                 >

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="68dp"
                    android:text="@string/reset_button"
                    android:onClick="selectOption" />

                <Button
                    android:id="@+id/acceptButton"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/resetButton"
                    android:layout_alignBottom="@+id/resetButton"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@+id/resetButton"
                    android:text="@string/accept_button"
                    android:onClick="selectOption" />

            </RelativeLayout>

            
        </TableRow>

    </LinearLayout>
	
</ScrollView>
